# core

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
.kamal/: secrets.example
alembic/: env.py
alembic/versions/: 001_initial.py  002_domain.py  003_agent_config.py  004_faq_entries.py  005_vector_indexes.py  006_conversation_mode_leads.py  007_inbound_coalescing.py
app/: main.py
app/controllers/: base.py  conversations.py  ingest.py
app/core/: config.py  dependencies.py  embeddings.py  llm.py  llm_capabilities.py  middleware.py  security.py  storage.py  vector_search.py
app/db/: session.py
app/models/: __init__.py  admin.py  agent_config.py  contact.py  conversation.py  memory.py  message.py
app/modules/: __init__.py  registry.py
app/schemas/: admin.py  admin_config.py  admin_contacts.py  admin_tools.py  ingest.py
app/services/: admin_service.py  agent_config_service.py  agent_context.py  agent_middleware.py  auth_service.py  channel_send.py  coalesce_worker.py  ingest_service.py  (+4 more)
config/: deploy.yml  init.sql
scripts/: create_admin.py
tests/: conftest.py  test_admin_config.py  test_admin_contacts.py  test_admin_media.py  test_auth.py  test_channel_send.py  test_coalescing.py  test_embeddings.py  test_faq.py  test_handoff_inbox.py  test_ingest.py  test_ingest_auth.py  test_internal_history.py  test_leads.py  test_llm_capabilities.py  test_memory_tools.py  test_notify.py  test_orchestrator.py  test_storage.py  test_transcription.py  test_vector_search.py
(+14 files in other folders)
